# godelta

./: README.md  algo.go  main.go  xbox.go
delta/: message.pb.go  message.proto
golisten/: main.go
gosub/: CMakeLists.txt  Makefile  README.md  manifest.xml  sub.go  sub.swigcxx  sub_gc.c  sub_wrap.cxx
gosub/inc/: sub.h
gosub/src/: sub.cpp
